Added more exercises

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -3137,7 +3137,7 @@
     "        super().__init__(name, breed)\n",
     "        self.color = color\n",
     "    def showDetails(self):\n",
-    "        print(f\"Name: {self.name}\")\n",
+    "        print(f\":Name {self.name}\")\n",
     "        print(f\"Breed: {self.breed}\")\n",
     "        print(f\"Color: {self.color}\")\n",
     "    def makeSound(self):\n",
@@ -3146,6 +3146,364 @@
     "d = Dog(\"Tommy\", \"Labrador\", \"Black\")\n",
     "d.showDetails()\n",
     "d.makeSound() \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "da41ceb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zahra\n",
+      "Bharatnatyam\n",
+      "Dance: Bharatnatyam\n",
+      "[<class '__main__.DancerEmployee'>, <class '__main__.Dancer'>, <class '__main__.Employee'>, <class 'object'>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exercise 75: Multiple inheritance\n",
+    "#Multiple inheritance is the process of acquiring the properties\n",
+    "#and methods of multiple parent classes by a child class\n",
+    "class Employee:\n",
+    "    def __init(self,name):\n",
+    "        self.name = name\n",
+    "    def showDetails(self):\n",
+    "        print(f\"The Name is: {self.name}\")\n",
+    "\n",
+    "class Dancer:\n",
+    "    def __init__(self, dance):\n",
+    "        self.dance = dance\n",
+    "    def showDetails(self):\n",
+    "        print(f\"Dance: {self.dance}\")\n",
+    "\n",
+    "#class DancerEmployee(Employee,Dancer):#first Employee will get called The Name is: Zahra\n",
+    "class DancerEmployee(Dancer, Employee):\n",
+    "    def __init__(self, dance, name):\n",
+    "        self.dance = dance\n",
+    "        self.name = name\n",
+    "\n",
+    "o = DancerEmployee(\"Bharatnatyam\",\"Zahra\")\n",
+    "print(o.name)\n",
+    "print(o.dance)\n",
+    "o.showDetails()\n",
+    "\n",
+    "#mro\n",
+    "#Method Resolution Order (MRO) is the order in which Python looks for \n",
+    "# a method in a hierarchy of classes.\n",
+    "print(DancerEmployee.mro()) #returns the order in which Python looks for a method in a hierarchy of classes\n",
+    "#The MRO is determined by the C3 linearization algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15196b2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Tommy\n",
+      "Species: Dog\n",
+      "Breed: Golden Retriever\n",
+      "Color: Golden\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exercise 76: multilevel inheritance\n",
+    "#when a derived class inherits from another derived class it is called \n",
+    "# multilevel inheritance\n",
+    "\n",
+    "class Animal:\n",
+    "    def __init__(self, name, species):\n",
+    "        self.name= name\n",
+    "        self.species = species\n",
+    "\n",
+    "    def showDetails(self):\n",
+    "        print(f\"Name: {self.name}\")\n",
+    "        print(f\"Species: {self.species}\")\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def __init__(self, name, breed):\n",
+    "        Animal.__init__(self, name, species=\"Dog\")\n",
+    "        self.breed = breed\n",
+    "    def showDetails(self):\n",
+    "        Animal.showDetails(self)\n",
+    "        print(f\"Breed: {self.breed}\")\n",
+    "class GoldenRetriever(Dog):\n",
+    "    def __init__(self, name, color):\n",
+    "        Dog.__init__(self, name, breed=\"Golden Retriever\")\n",
+    "        self.color = color\n",
+    "\n",
+    "    def showDetails(self):\n",
+    "        Dog.showDetails(self)\n",
+    "        print(f\"Color: {self.color}\")\n",
+    "\n",
+    "d = GoldenRetriever(\"Tommy\", \"Golden\")\n",
+    "d.showDetails()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04440af6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Exercise 77: Hybrid and Hierarchical inheritance\n",
+    "#Hybrid inheritance is a combination of multiple inheritance and multilevel \n",
+    "# inheritance\n",
+    "class Base:\n",
+    "    pass\n",
+    "class Derived1(Base):\n",
+    "    pass\n",
+    "\n",
+    "class Derived2(Base):\n",
+    "    pass\n",
+    "\n",
+    "class Derived3(Derived1, Derived2):\n",
+    "    pass\n",
+    "#Hierarchical inheritance is when multiple child classes inherit from a \n",
+    "# single parent class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f744e4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Exercise 78: Time module\n",
+    "#The time module in Python provides various time-related functions\n",
+    "\n",
+    "import time\n",
+    "#The time() function returns the current time in seconds since the epoch\n",
+    "\n",
+    "def usingWhile():\n",
+    "    i=0\n",
+    "    while i<50000:\n",
+    "        i+=1\n",
+    "        print(i)\n",
+    "\n",
+    "def usingFor():\n",
+    "    for i in range(50000):\n",
+    "        print(i)\n",
+    "\n",
+    "init = time.time() #returns the current time in seconds since the epoch\n",
+    "usingFor()\n",
+    "print(time.time() - init) #returns the time taken to execute the function\n",
+    "usingWhile()\n",
+    "print(time.time() - init) #returns the time taken to execute the function\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e2c32f92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "2025-05-20 15:18:48\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sleep() function\n",
+    "#The sleep() function suspends the execution of the current thread for a specified number of seconds\n",
+    "\n",
+    "t = time.sleep(5) #suspends the execution of the current thread for 5 seconds\n",
+    "print(\"Hello\") #prints Hello after 5 seconds\n",
+    "\n",
+    "t = time.localtime() #returns the current local time\n",
+    "formatted_time = time.strftime(\"%Y-%m-%d %H:%M:%S\", t) #formats the time in the specified format\n",
+    "print(formatted_time) #prints the current local time in the specified format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "526774bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#is_even\n",
+    "def is_even(number):\n",
+    "\treturn number%2==0\n",
+    "\t\n",
+    "is_even(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61083a1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fizz_buzz(n):\n",
+    "    if n % 3 == 0 and n % 5 == 0:\n",
+    "        return \"FizzBuzz\"\n",
+    "    elif n % 3 == 0:\n",
+    "        return \"Fizz\"\n",
+    "    elif n % 5 == 0:\n",
+    "        return \"Buzz\"\n",
+    "    else:\n",
+    "        return n\n",
+    "\n",
+    "# Example usage\n",
+    "print(fizz_buzz(15))  # Should print \"FizzBuzz\"\n",
+    "print(fizz_buzz(9))   # Should print \"Fizz\"\n",
+    "print(fizz_buzz(10))  # Should print \"Buzz\"\n",
+    "print(fizz_buzz(7))   # Should print 7\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c529b38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'olleH'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def reverse_string(str):\n",
+    "\t\trev_str=\"\"\n",
+    "\t\tfor char in str:\n",
+    "\t\t\trev_str = char + rev_str  # we are adding the character at the beginning of the string \n",
+    "\t\treturn rev_str\n",
+    "\t\t\n",
+    "reverse_string(\"Hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "51f479f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def vowel_cnt(str):\n",
+    "\tv_cnt=0\n",
+    "\tfor char in str:\n",
+    "\t\tif char in ['a','e','i','o','u','A','E','I','O','U']:\n",
+    "\t\t\tv_cnt+=1\t\n",
+    "\t\t\n",
+    "\treturn v_cnt\n",
+    "\n",
+    "vowel_cnt(\"Zahra Kazi loves cats\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "0a206044",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_max(list):\n",
+    "\tmax= list[0]\n",
+    "\tfor num in list:\n",
+    "\t\tif num> max:\n",
+    "\t\t\tmax= num\t\n",
+    "\treturn max\n",
+    "\n",
+    "find_max([-2,-44,-6,-90,-3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "61816800",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_palindrome(str):\n",
+    "\trev = \"\"\n",
+    "\tfor char in str:\n",
+    "\t\trev = char + rev\n",
+    "\tif rev==str:\n",
+    "\t\treturn True\n",
+    "\telse:\n",
+    "         return False\n",
+    "\t\n",
+    "is_palindrome(\"madam\")"
    ]
   }
  ],
