adding some exercises

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -3301,8 +3301,7 @@
     "usingFor()\n",
     "print(time.time() - init) #returns the time taken to execute the function\n",
     "usingWhile()\n",
-    "print(time.time() - init) #returns the time taken to execute the function\n",
-    "\n"
+    "print(time.time() - init) #returns the time taken to execute the function."
    ]
   },
   {
