--- a/demo.ipynb
+++ b/demo.ipynb
@@ -3477,7 +3477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "61816800",
    "metadata": {},
    "outputs": [
@@ -3487,7 +3487,7 @@
        "True"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3503,6 +3503,186 @@
     "         return False\n",
     "\t\n",
     "is_palindrome(\"madam\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e1a4e738",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sum_of_squares\n",
+    "'''sum=0\n",
+    "numbers= int(input(\"How many numbers you want? \"))\n",
+    "for n in range(1,numbers+1):\n",
+    "    sum+=(n*n)\n",
+    "print(sum)\n",
+    "'''\n",
+    "def sum_of_squares():\n",
+    "    sum=0\n",
+    "    list_of_nos = list(map(int, input(\"Enter numbers separated by space: \").split()))\n",
+    "       \n",
+    "    for n in list_of_nos:\n",
+    "        sum+=(n*n)\n",
+    "    return f\"Sum of squares of numbers is {sum}\"\n",
+    "\n",
+    "sum_of_squares()\n",
+    "\n",
+    "def sum_of_squares(numbers):\n",
+    "    total = 0\n",
+    "    for n in numbers:\n",
+    "        total += n*n\n",
+    "    return total\n",
+    "sum_of_squares([1,2,3,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "925bb833",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# factorial calculator\n",
+    "def factorial(n):\n",
+    "    if n < 0:\n",
+    "        return \"Please enter a non-negative integer!\"\n",
+    "    elif n == 0 or n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        fact = 1\n",
+    "        for i in range(2, n + 1):\n",
+    "            fact *= i\n",
+    "        return fact\n",
+    "\n",
+    "\n",
+    "print(factorial(5)) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5a19e333",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# factorial calculator\n",
+    "def factorial(n):\n",
+    "    if n < 0:\n",
+    "        return \"Please enter a non-negative integer!\"\n",
+    "    elif n == 0 or n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        fact = 1\n",
+    "        fact = n*factorial(n-1)\n",
+    "        return fact\n",
+    "\n",
+    "\n",
+    "print(factorial(5)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2bf1e393",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 8, 1, 3]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  remove_duplicates\n",
+    "def  remove_duplicates(list):\n",
+    "    new_list=[]\n",
+    "    for element in list:\n",
+    "        if element not in new_list:\n",
+    "            new_list.append(element)\n",
+    "    return new_list\n",
+    "\n",
+    "remove_duplicates([4,8,1,1,3])\n",
+    "        \n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f001a41e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'zahra': 1, 'loves': 2, 'bananas': 1}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# word_frequency\n",
+    "def word_frequency(str):\n",
+    "    word_cnt={}\n",
+    "    words=str.split()\n",
+    "    for w in words:\n",
+    "        if w not in word_cnt:\n",
+    "            word_cnt[w]=1\n",
+    "        else:\n",
+    "            word_cnt[w]+=1\n",
+    "    return word_cnt\n",
+    "word_frequency(\"zahra loves loves bananas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c8ba625",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# guess_the_number\n",
+    "import random"
    ]
   }
  ],
