adding some exercises

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -3676,13 +3676,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "1c8ba625",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "83\n",
+      "guess is too low\n",
+      "guess is too low\n",
+      "guess is too low\n",
+      "guess is too high\n",
+      "guess is too high\n",
+      "Guess is correct!\n",
+      "Your guess is correct\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'You took 5 attempts to find the number'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# guess_the_number\n",
-    "import random"
+    "import random\n",
+    "\n",
+    "def guess_the_number():\n",
+    "    cnt=0\n",
+    "    random_number=random.randrange(1,100)\n",
+    "    print(random_number)\n",
+    "    while(True):\n",
+    "        user_input=(int(input(\"Enter a number between 1 to 100: \")))\n",
+    "        if(user_input>random_number):\n",
+    "            print(\"guess is too high\")\n",
+    "            cnt+=1\n",
+    "        elif(user_input<random_number):\n",
+    "            print(\"guess is too low\")\n",
+    "            cnt+=1\n",
+    "        else:\n",
+    "            print(\"Guess is correct!\")\n",
+    "            break\n",
+    "    print(\"Your guess is correct\")\n",
+    "    return f\"You took {cnt} attempts to find the number\"\n",
+    "\n",
+    "guess_the_number()\n"
    ]
   }
  ],
