adding some exercises

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -3729,6 +3729,100 @@
     "\n",
     "guess_the_number()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "107cff93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find second highest number in a list\n",
+    "def second_highest(numbers):\n",
+    "    unique_numbers = list(set(numbers)) #to consider only unique numbers\n",
+    "    if len(unique_numbers) < 2:\n",
+    "        return \"There is no second largest number\"\n",
+    "    unique_numbers.sort(reverse=True)\n",
+    "  \n",
+    "    return  unique_numbers[1]\n",
+    "user_input=input(\"Enter numbers seoarated by spaces: \")\n",
+    "number_list=list(map(int,user_input.split()))\n",
+    "print(second_highest(number_list))\n",
+    "#or\n",
+    "second_highest([10,2,3,4,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "92844277",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result is:  9\n",
+      "Result is:  18\n",
+      "you have exited the calculator\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Smart Calculator\n",
+    "def smart_calculator():\n",
+    "        num1=int(input(\"Enter First number: \"))\n",
+    "        operator = input(\"Enter a valid operator from +, -, *, /, %, //:  \")\n",
+    "        num2=int(input(\"Enter Second number: \"))\n",
+    "\n",
+    "        match operator:\n",
+    "         case '+':\n",
+    "             return num1 + num2\n",
+    "         case '-':\n",
+    "             return num1 - num2\n",
+    "         case '*':\n",
+    "            return num1 * num2\n",
+    "         case '/':\n",
+    "            if num2==0:\n",
+    "                return \"Error: Division by Zero Error\"\n",
+    "            return num1 / num2\n",
+    "         case '%':\n",
+    "            return num1 % num2\n",
+    "         case '//':\n",
+    "            return num1 // num2\n",
+    "         case '_':\n",
+    "                return \"Invalid operator \"\n",
+    "   \n",
+    "\n",
+    "while(True):\n",
+    "   result = smart_calculator()\n",
+    "   print(\"Result is: \", result)\n",
+    "   exit_criteria = input(\"Do you want to continue..?:(yes/exit)\").lower()\n",
+    "   if(exit_criteria==\"exit\"):\n",
+    "      print(\"you have exited the calculator\")\n",
+    "      break\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
