adding some exercises

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -3823,6 +3823,101 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "2897b4bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=================To do List Menu is================ \n",
+      "1: Add a new Task \n",
+      "2: View all Tasks \n",
+      "3: Mark a Task as completed \n",
+      "4: Delete a Task \n",
+      "5: Exit the app  \n",
+      "Your task: do coding is add to ToDoos List\n",
+      "=================To do List Menu is================ \n",
+      "1: Add a new Task \n",
+      "2: View all Tasks \n",
+      "3: Mark a Task as completed \n",
+      "4: Delete a Task \n",
+      "5: Exit the app  \n",
+      "=================To do List Menu is================ \n",
+      "1: Add a new Task \n",
+      "2: View all Tasks \n",
+      "3: Mark a Task as completed \n",
+      "4: Delete a Task \n",
+      "5: Exit the app  \n",
+      "No tasks yet\n",
+      "=================To do List Menu is================ \n",
+      "1: Add a new Task \n",
+      "2: View all Tasks \n",
+      "3: Mark a Task as completed \n",
+      "4: Delete a Task \n",
+      "5: Exit the app  \n",
+      "Good Bye! Exiting the ToDoos app\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To-Do List App(Text-based)\n",
+    "def todoos():\n",
+    "    Task_list=[]\n",
+    "   \n",
+    "    while True:\n",
+    "        print(\"=================To do List Menu is================ \")\n",
+    "        print(\"1: Add a new Task \\n2: View all Tasks \\n3: Mark a Task as completed \\n4: Delete a Task \\n5: Exit the app  \")\n",
+    "        try:\n",
+    "            option = int(input(\"Enter your choice from menu:\"))\n",
+    "        except ValueError:\n",
+    "            print(\"Please enter a valid integer\")\n",
+    "            continue\n",
+    "        match option:\n",
+    "            case 1:\n",
+    "                task = input(\"Enter your task: \")\n",
+    "                Task_list.append({\"task\":task, \"done\":False})\n",
+    "                print( f\"Your task: {task} is add to ToDoos List\")\n",
+    "            case 2:\n",
+    "                if not Task_list:\n",
+    "                    print(\"No tasks yet\")\n",
+    "                else:\n",
+    "                    for i, t in enumerate(Task_list, start =1):\n",
+    "                        status=\"done\" if t[\"done\"] else \"no\"\n",
+    "                        print( f\"Your tasks are: {i}.{status} {t['task']}\")\n",
+    "            case 3:\n",
+    "                if not Task_list:\n",
+    "                    print(\"No tasks yet\")\n",
+    "                    continue\n",
+    "                try:\n",
+    "                    index =int(input(\"Enter task number to mark as done: \"))-1\n",
+    "                    Task_list[index][\"done\"]= True\n",
+    "                    print(f\"{Task_list[index]} is marked as completed\")\n",
+    "                except(IndexError, ValueError):\n",
+    "                    print(\"Invalid task umber\")\n",
+    "            case 4:\n",
+    "                 if not Task_list:\n",
+    "                    print(\"No tasks yet\")\n",
+    "                    continue\n",
+    "                 try:\n",
+    "                      index =int(input(\"Enter task number to remove:  \"))-1\n",
+    "                      removed = Task_list.pop(index)\n",
+    "                 except(IndexError, ValueError):\n",
+    "                    print(\"Invalid task umber\")\n",
+    "            case 5:\n",
+    "                print(\"Good Bye! Exiting the ToDoos app\")\n",
+    "                break\n",
+    "            case _:\n",
+    "                print(\"Invalid option choose between 1-5\")\n",
+    "   \n",
+    "                \n",
+    "\n",
+    "todoos()"
+   ]
   }
  ],
  "metadata": {
